[package]
name = "rcgen"
version = "0.9.2"
authors = ["est31 <MTest31@outlook.com>"]
description = "Rust X.509 certificate generator"
repository = "https://github.com/est31/rcgen"
documentation = "https://docs.rs/rcgen"
license = "MIT OR Apache-2.0"
edition = "2018"
readme = "README.md"

[lib]
name = "rcgen"
path = "src/lib.rs"

[[bin]]
name = "rcgen"
path = "src/main.rs"
required-features = ["pem"]

[dependencies]
# sgx dependencies
sgx_tstd = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true, features = ["net", "untrusted_time"] }
yasna_sgx = { package = "yasna",  rev = "sgx_1.1.3", default-features = false, optional = true, features = ["bit-vec", "num-bigint", "chrono", "mesalock_sgx"], git = "https://github.com/mesalock-linux/yasna.rs-sgx" }
pem_sgx_dep = { package = "pem", version = "0.8.2", default-features = false, optional = true, git = "https://github.com/mesalock-linux/pem-rs-sgx", features = ["mesalock_sgx"] }
ring_sgx= { package = "ring", tag = "v0.16.5", default-features = false, optional = true, git = "https://github.com/mesalock-linux/ring-sgx", features = ["mesalock_sgx"] }
chrono_sgx = {  package = "chrono", optional = true, git = "https://github.com/mesalock-linux/chrono-sgx" }

yasna = { version = "0.4", optional = true, features = ["chrono", "std"] }
ring = { version = "0.16", optional = true }
pem_std = { package = "pem", version = "1.0", optional = true }
chrono = { version = "0.4.6", optional = true, default-features = false }
x509-parser = { version = "0.13", features = ["verify"], optional = true }
zeroize = { version = "1.2", optional = true }

[package.metadata.docs.rs]
features = ["x509-parser"]

[dev-dependencies]
openssl = "0.10"
x509-parser = { version = "0.13", features = ["verify"] }
webpki = { version = "0.22", features = ["std"] }
botan = { version = "0.8", features = ["vendored"] }
rand = "0.8"
rsa = "0.5"

# This greatly speeds up rsa key generation times
# (only applies to the dev-dependency because cargo
# ignores profile overrides for non leaf packages)
[profile.dev.package.num-bigint-dig]
opt-level = 3

[features]
default = ["pem", "std"]
pem = ["pem_std"]
pem_sgx = ["pem_sgx_dep"]
sgx = [
    "sgx_tstd",
    "ring_sgx",
    "yasna_sgx",
    "chrono_sgx",
]
std = [
    "pem_std",
    "ring",
    "yasna",
    "chrono",
]

[patch."https://github.com/apache/teaclave-sgx-sdk.git"]
sgx_tstd = { version = "1.1.4", git = "https://github.com/haerdib/incubator-teaclave-sgx-sdk", branch = "master"}